plugins {
    id 'java-library'
    id 'maven-publish'
    id 'com.diffplug.spotless' version '8.2.1'
}

group = 'com.github.getCurrentThread'
version = rootProject.findProperty('version') ?: '0.0.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'

    implementation libs.gson
}

spotless {
    java {
        googleJavaFormat().aosp()
        importOrder('java', 'javax', 'jakarta', 'org', 'com')
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    withSourcesJar()
    withJavadocJar()
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
            groupId = 'com.github.getCurrentThread'
            artifactId = 'soopapi'
        }
    }
}

tasks.withType(Javadoc) {
    options.addBooleanOption('-enable-preview', true)
    options.addStringOption('source', '25')
    options.addStringOption('Xdoclint:none', '-quiet')
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['--enable-preview', '-Xlint:-preview'])
    dependsOn 'spotlessApply'
}

test {
    jvmArgs(['--enable-preview'])
    useJUnitPlatform {
        excludeTags 'integration'
    }
    testLogging {
        showStandardStreams = true
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }

    afterTest { desc, result ->
        if (result.resultType == TestResult.ResultType.FAILURE) {
            println "Failing test: ${desc.name}"
            println "Test result: ${result.resultType}"
            println "Test exception: ${result.exception}"
        }
    }
}
